<resources>
    <string name="app_name">Trivia Duello</string>
    <string name="onboarding_previous_text">PREVIOUS</string>
    <string name="onboarding_next_text">NEXT</string>
    <string name="onboarding_challenge_text">Show your Trivia skills to plenty of people around the world.</string>
    <string name="onboarding_time_text">Race against time to answer the questions.</string>
    <string name="onboarding_leaderboard_text">Make your way to the top of weekly Leaderboard.</string>

    <string name="chooser_title">Sharing Option</string>
    <string name="dialog_message">Do you want to log out?</string>
    <string name="logout_dialog_title">Log out!</string>
    <string name="category_dialog_title">Categories</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="log_in_with_google">Log in with Google+</string>
    <string name="log_in_anonymously">Log in Anonymously</string>
    <string name="log_in_with_e_mail_and_password">Log in with E-mail and password</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_email_hint">E-mail Address</string>
    <string name="log_in">Log in</string>
    <string name="cancel_login">Cancel Login</string>
    <string name="empty_email_text">E-mail is Empty.</string>
    <string name="empty_password_text">Password is Empty.</string>
    <string name="empty_field_error">Please fill all the fields!</string>
    <string name="login_failed_message">You are not logged in. Something went wrong during process.</string>
    <string name="connectivity_problem">You have problem with your internet connection.</string>
    <string name="firebase_onboarding_message">onboarding started</string>
    <string name="firebase_main_message">click start practice mode</string>
    <string name="firebase_main_duel_message">click start duel mode</string>
    <string name="firebase_question_screen_message">Quiz started</string>
    <string name="firebase_question_screen_result_message">Result received</string>
    <string name="dialog_result_title">You have %s points.</string>
    <string name="dialog_close">Close</string>
    <string name="wrong_questions_explanation">Answer for question:\n%s\n-> %s .\n\n</string>
    <string name="timer_text">%s s</string>
    <string name="firebase_leaderboard_message">Recyclerview is created</string>
    <string name="empty_questions">You have not saved any questions yet. It will be saved once you start playing online!</string>
    <string name="leaving_game_title">You are leaving the game.</string>
    <string name="leaving_game_message">If you leave the game you will be getting \"0\" points from this game. Are you sure you want to leave?</string>
    <string name="dialog_continue_text">continue</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="user_name_in_profile">Name is : %s</string>
    <string name="dialog_account_delete">Are you sure?</string>
    <string name="dialog_account_message">Your account will be deleted. Are you sure?</string>
    <string name="no_leaderboard_yet">No users in leaderboard yet.</string>
    <string name="widget_text_template">Name: %s\nPoint: %s\n\n</string>
    <string name="there_are_no_items_in_leaderboard_yet">There are no items in leaderboard yet!</string>
</resources>
