<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:theme="@style/TextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/password_name_holder">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/log_in_email_hint"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_name_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:theme="@style/TextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/start_login_with_email_and_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/log_in_password_hint"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/start_login_with_email_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:background="@drawable/main_page_button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_login_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:background="@drawable/main_page_button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cancel_login"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/start_login_with_email_and_password" />

</android.support.constraint.ConstraintLayout>