<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:background="@drawable/login_button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in_with_facebook"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/google_plus_login_button" />

    <Button
        android:id="@+id/google_plus_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:background="@drawable/google_plus_button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in_with_google"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/login_layout_with_email_and_password"/>

    <Button
        android:id="@+id/login_with_email_and_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_main_margin"
        android:background="@drawable/anonymous_button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/log_in_with_e_mail_and_password"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/google_plus_login_button" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>